Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Capacidade_de_UBS__c.field-meta.xml
<CustomField>
    <fullName>Capacidade_de_UBS__c</fullName>
    <description>Cantidad medida en sacos de 40Kg</description>
    <inlineHelpText>Sacos de 40 Kgs</inlineHelpText>
    <label>Capacidade de UBS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>