Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Compra_Vende_Semillas_de_Terceros__c.field-meta.xml
<CustomField>
    <fullName>Compra_Vende_Semillas_de_Terceros__c</fullName>
    <description>Realizam Compra e Venda de Sementes de Terceiros ?</description>
    <inlineHelpText>Realizam Compra e Venda de Sementes de Terceiros ?</inlineHelpText>
    <label>Compra/Vende Semillas de Terceros</label>
    <type>TextArea</type>
</CustomField>