Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Emiten_Facturas_de_Venta_Transferencia__c.field-meta.xml
<CustomField>
    <fullName>Emiten_Facturas_de_Venta_Transferencia__c</fullName>
    <description>Para realizarem a inscrição dos Campos de Produção de Sementes, emitem Notas Fiscais de Venda / ou Tranferência para Consumo para os Volumes que são destinados a Plantio (Uso Próprio), e que são informados na Relação de Campos para Produção de Sementes ?</description>
    <inlineHelpText>Para realizarem a inscrição dos Campos de Produção de Sementes, emitem Notas Fiscais de Venda / ou Tranferência para Consumo para os Volumes que são destinados a Plantio (Uso Próprio), e que são informados na Relação de Campos para Produção de Sementes ?</inlineHelpText>
    <label>Emiten Facturas de Venta / Transferencia</label>
    <type>TextArea</type>
</CustomField>