Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>Multiplicador__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Multiplicador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resumo da conta</relationshipLabel>
    <relationshipName>Resumo_da_conta</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>