Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Numero_de_unidades__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_unidades__c</fullName>
    <label>Numero de unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>