Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Participacion_en_la_cosecha__c.field-meta.xml
<CustomField>
    <fullName>Participacion_en_la_cosecha__c</fullName>
    <description>Qual foi a Participação (%) da BRASMAX /e ou DONMARIO na safra  ( _______________ ):</description>
    <inlineHelpText>Qual foi a Participação (%) da BRASMAX /e ou DONMARIO na safra  ( _______________ ):</inlineHelpText>
    <label>Participacion en la cosecha</label>
    <type>TextArea</type>
</CustomField>