Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Producao_total_safra_anterior__c.field-meta.xml
<CustomField>
    <fullName>Producao_total_safra_anterior__c</fullName>
    <description>CAntidad medida en sacos de 40Kg</description>
    <inlineHelpText>Sacos de 40 Kgs</inlineHelpText>
    <label>Produção total safra anterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>