Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Projecao_de_vendas_safra_anual__c.field-meta.xml
<CustomField>
    <fullName>Projecao_de_vendas_safra_anual__c</fullName>
    <inlineHelpText>Sacos de 40 Kgs</inlineHelpText>
    <label>Projeção de vendas safra anual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>