Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Quebra__c.field-meta.xml
<CustomField>
    <fullName>Quebra__c</fullName>
    <description>Qual é a % de Quebra Técnica MÉDIA (da empresa) referente ao volume BRUTO de semente de soja que entra na UBS para o volume que é Beneficiado ?</description>
    <inlineHelpText>Qual é a % de Quebra Técnica MÉDIA (da empresa) referente ao volume BRUTO de semente de soja que entra na UBS para o volume que é Beneficiado ?</inlineHelpText>
    <label>Quebra</label>
    <type>TextArea</type>
</CustomField>