Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Separa_los_volumenes__c.field-meta.xml
<CustomField>
    <fullName>Separa_los_volumenes__c</fullName>
    <description>O Sistema da empresa separa os volumes destinados a Uso Próprio dos volumes que são comercializados ao produtor ?</description>
    <inlineHelpText>O Sistema da empresa separa os volumes destinados a Uso Próprio dos volumes que são comercializados ao produtor ?</inlineHelpText>
    <label>Separa los volumenes</label>
    <type>TextArea</type>
</CustomField>