Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Sistema_Implantado__c.field-meta.xml
<CustomField>
    <fullName>Sistema_Implantado__c</fullName>
    <description>Possuem Sistema implantado na empresa ? Qual ?</description>
    <inlineHelpText>Possuem Sistema implantado na empresa ? Qual ?</inlineHelpText>
    <label>Sistema Implantado</label>
    <type>TextArea</type>
</CustomField>