Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Vendas_totais_safra_anterior__c.field-meta.xml
<CustomField>
    <fullName>Vendas_totais_safra_anterior__c</fullName>
    <description>Cantidad medida en sacos de 40Kg</description>
    <inlineHelpText>Sacos de 40 Kgs</inlineHelpText>
    <label>Vendas totais safra anterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>