Salesforce/main/default/main/default/objects/Resumo_da_conta__c/fields/Ventas_Totales_RR__c.field-meta.xml
<CustomField>
    <fullName>Ventas_Totales_RR__c</fullName>
    <description>Porcentagem (%) das Vendas Totais RR  ( _______ ) e INTACTA ( _______ ) na safra  ( _______________ ).</description>
    <inlineHelpText>Porcentagem (%) das Vendas Totais RR  ( _______ ) e INTACTA ( _______ ) na safra  ( _______________ ).</inlineHelpText>
    <label>Ventas Totales RR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>