Salesforce/main/default/main/default/objects/Resumo_da_conta__c/validationRules/Porcentaje_Mayor_Que_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Porcentaje_Mayor_Que_100</fullName>
    <active>true</active>
    <errorConditionFormula>Vendas_para_agricultores__c &gt; 1</errorConditionFormula>
    <errorMessage>A porcentagem de vendas não pode ser maior que 100%</errorMessage>
</ValidationRule>